<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/profile_white_shade"
    android:padding="@dimen/root_layout_padding"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/age_text_marginTop"
        android:layout_marginBottom="@dimen/age_text_marginButton"
        android:text="@string/age"
        android:lineSpacingExtra="1dp"
        android:padding="@dimen/age_text_padding"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_Age"
        android:background="@color/age_design_color"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#844046"
        android:layout_marginTop="@dimen/selected_date_marginTop"
        android:textSize="@dimen/textSize_selected_date"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightGreyTextColor"
        android:text="@string/selected_date"
        android:textSize="@dimen/textSize_selected_date"/>

    <TextView
        android:id="@+id/tvSelectedDateInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#844046"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/selected_date_in_minutes_marginTop"
        android:textSize="@dimen/textSize_selected_date_in_minutes"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightGreyTextColor"
        android:text="@string/age_in_minutes"
        android:textSize="@dimen/textSize_age_in_minutes"/>


</LinearLayout>